# bin-callgraph

./: .gitignore  CMakeLists.txt  README.md  instr.cpp
disasm/: capstone.cpp  capstone_disasm.h  disasm.h  zydis.cpp  zydis_disasm.h
test/: CMakeLists.txt  c++_single_func_modify_ecx.cpp  c++_single_func_modify_ecx.txt  cycle  cycle.c  multi_func_modify_ecx.c  multi_func_modify_ecx.txt  run.sh  single_func_modify_bss.c  single_func_modify_bss.txt  single_func_modify_ecx.c  single_func_modify_ecx.txt  test.sh
test/shared_lib/: main.c  multi_func_shared_lib_modify_ecx.txt
test/shared_lib/lib/: lib_cycle.c
test/static_lib/: main.c
test/static_lib/lib/: lib_cycle.c  lib_cycle.h
